src/main/antlr4/.antlr/ConvCC20212Parser.java
// Generated from /home/milkfrog/git/compiladores/src/main/antlr4/ConvCC20212.g4 by ANTLR 4.8

import ExpressionTree.*;
import Scope.*;
import SymbolTable.*;
import Enum.*;
import GCI.*;

import java.util.ArrayList;
import java.util.List;
import static java.lang.System.exit;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConvCC20212Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, FOR=2, ELSE=3, RETURN=4, READ=5, PRINT=6, NEW=7, BREAK=8, DEF=9, 
		TYPE_STRING=10, TYPE_FLOAT=11, TYPE_INT=12, NULL=13, INT=14, FLOAT=15, 
		STRING=16, IDENT=17, LPAREN=18, RPAREN=19, LBRACE=20, RBRACE=21, LBRACK=22, 
		RBRACK=23, SEMI=24, COMMA=25, ASSIGN=26, ADD=27, SUB=28, MUL=29, DIV=30, 
		MOD=31, GT=32, LT=33, EQUAL=34, LE=35, GE=36, NOTEQUAL=37, WHITESPACE=38;
	public static final int
		RULE_program = 0, RULE_funclist = 1, RULE_funclist2 = 2, RULE_funcdef = 3, 
		RULE_paramlist = 4, RULE_paramlist2 = 5, RULE_statement = 6, RULE_statelist = 7, 
		RULE_statelist2 = 8, RULE_vardecl = 9, RULE_a = 10, RULE_t1 = 11, RULE_paramlistcall = 12, 
		RULE_paramlistcall2 = 13, RULE_printstat = 14, RULE_readstat = 15, RULE_returnstat = 16, 
		RULE_ifstat = 17, RULE_ifstat1 = 18, RULE_forstat = 19, RULE_allocexpression = 20, 
		RULE_allocexpression1 = 21, RULE_atribstat1 = 22, RULE_atribstat2 = 23, 
		RULE_atribstat3 = 24, RULE_b = 25, RULE_t2 = 26, RULE_expression = 27, 
		RULE_expression2 = 28, RULE_numexpression = 29, RULE_c = 30, RULE_t3 = 31, 
		RULE_term = 32, RULE_d = 33, RULE_t4 = 34, RULE_unaryexpr = 35, RULE_factor = 36, 
		RULE_lvalue = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funclist", "funclist2", "funcdef", "paramlist", "paramlist2", 
			"statement", "statelist", "statelist2", "vardecl", "a", "t1", "paramlistcall", 
			"paramlistcall2", "printstat", "readstat", "returnstat", "ifstat", "ifstat1", 
			"forstat", "allocexpression", "allocexpression1", "atribstat1", "atribstat2", 
			"atribstat3", "b", "t2", "expression", "expression2", "numexpression", 
			"c", "t3", "term", "d", "t4", "unaryexpr", "factor", "lvalue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'for'", "'else'", "'return'", "'read'", "'print'", "'new'", 
			"'break'", "'def'", "'string'", "'float'", "'int'", "'null'", null, null, 
			null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'=='", "'<='", "'>='", 
			"'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "FOR", "ELSE", "RETURN", "READ", "PRINT", "NEW", "BREAK", 
			"DEF", "TYPE_STRING", "TYPE_FLOAT", "TYPE_INT", "NULL", "INT", "FLOAT", 
			"STRING", "IDENT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "SEMI", "COMMA", "ASSIGN", "ADD", "SUB", "MUL", "DIV", "MOD", 
			"GT", "LT", "EQUAL", "LE", "GE", "NOTEQUAL", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ConvCC20212.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    List<ExpressionTree> trees = new ArrayList<ExpressionTree>();

	    List<ScopeNode> scopes = new ArrayList<ScopeNode>();

	    LinkedStack scopeStack = new LinkedStack();

	    int temporaryCounter, labelCounter, funcCounter, beginCounter, exprTrueCounter, exprFalseCounter = 0;

	    ExpressionTree addTree(Node node) {
	        ExpressionTree expTree = new ExpressionTree(node, temporaryCounter);
	        Node root = expTree.getRoot();
	        String result = expTree.validateTree(root);
	        if (result.equals("")) {
	            String msg = "A árvore abaixo contém experssões inválidas\n" + expTree.getRoot().toString();
	            notifyErrorListeners("Expressão Inválida detectada");
	            throw new ParseCancellationException('\n' + msg);
	        }

	        trees.add(expTree);
	        return expTree;
	    }

	    String createLabel(String type) {
	        String s = "";
	        switch (type) {
	            case "label": {
	                s = "L_" + labelCounter;
	                labelCounter++;
	                break;
	            }
	            case "func": {
	                s = "FUNC_" + funcCounter;
	                funcCounter++;
	                break;
	            }
	            case "begin": {
	                s = "BEGIN_" + beginCounter;
	                beginCounter++;
	                break;
	            }
	            case "exprTrue": {
	                s = "EXPR_TRUE_" + exprTrueCounter;
	                exprTrueCounter++;
	                break;
	            }
	            case "exprFalse": {
	                s = "EXPR_FALSE_" + exprFalseCounter;
	                exprFalseCounter++;
	                break;
	            }
	        }
	        return s;
	    }

	    GenerateReturn generateCode(ExpressionTree expTree) {
	        StringBuilder sb = new StringBuilder();
	        Node root = expTree.getRoot();
	        GenerateReturn generateReturn = new GenerateReturn(expTree.generateCode(root, sb), sb.toString());
	        temporaryCounter = expTree.getCounter();
	        return generateReturn;
	    }

	    void insertIdent(String lexeme, boolean isFunction, String type, int declarationLine) {
	        ScopeNode actualScope = scopeStack.peek();
	        SemanticReports report = actualScope.getSymbolTable().insert(lexeme, isFunction, type, declarationLine);
	        if (report == SemanticReports.IDENT_ALREADY_EXISTS) {
	            int previousDeclarationLine = actualScope.getSymbolTable().getEntry(lexeme).getDeclarationLine();
	            String msg = "A variável " + lexeme + " já foi declarada anteriormente na linha " + previousDeclarationLine;
	            notifyErrorListeners(msg);
	            throw new ParseCancellationException('\n' + msg);
	        }
	    }

	    void putScope(boolean isFor) {
	        scopeStack.push(new SymbolTable(), isFor);
	    }

	    void popScope() {
	        scopes.add(scopeStack.pop());
	    }

	    void verifyBreak() {
	        ScopeNode actualScope = scopeStack.peek();
	        if (!actualScope.isFor()) {
	            String msg = "Um comando break foi utilizado fora de uma operação 'for'";
	            notifyErrorListeners(msg);
	            throw new ParseCancellationException('\n' + msg);
	        }
	    }

	    String getTypeOfIdent(String lexeme) {
	        ScopeNode previous = scopeStack.peek();
	        while (previous != null) {
	             SymbolTableEntry entry = previous.getSymbolTable().getEntry(lexeme);
	             if (entry != null) {
	                return entry.getType();
	             }
	             previous = previous.getPrevious();
	        }
	        String msg = "O identificador " + lexeme + " foi usado mas nunca definido!";
	        notifyErrorListeners(msg);
	        throw new ParseCancellationException('\n' + msg);
	    }

	public ConvCC20212Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public String code;
		public StatementContext statement;
		public FunclistContext funclist;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);

		    {putScope(false);}
		    ((ProgramContext)_localctx).code =  "";

		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case FOR:
			case RETURN:
			case READ:
			case PRINT:
			case BREAK:
			case TYPE_STRING:
			case TYPE_FLOAT:
			case TYPE_INT:
			case IDENT:
			case LBRACE:
			case SEMI:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				((ProgramContext)_localctx).statement = statement(false, createLabel("label"), "");
				((ProgramContext)_localctx).code =  ((ProgramContext)_localctx).statement.code ;
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				((ProgramContext)_localctx).funclist = funclist();
				((ProgramContext)_localctx).code =  ((ProgramContext)_localctx).funclist.code;
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);

			    popScope();
			    Utils.exportExpressionTrees(trees);
			    Utils.exportIntermediaryCode(_localctx.code);
			    Utils.exportScopes(scopes);

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistContext extends ParserRuleContext {
		public String code;
		public FuncdefContext funcdef;
		public Funclist2Context funclist2;
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Funclist2Context funclist2() {
			return getRuleContext(Funclist2Context.class,0);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist; }
	}

	public final FunclistContext funclist() throws RecognitionException {
		FunclistContext _localctx = new FunclistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funclist);

		        ((FunclistContext)_localctx).code =  "";
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			((FunclistContext)_localctx).funcdef = funcdef();
			setState(86);
			((FunclistContext)_localctx).funclist2 = funclist2();
			((FunclistContext)_localctx).code =  ((FunclistContext)_localctx).funcdef.code + "\n" +  ((FunclistContext)_localctx).funclist2.code;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Funclist2Context extends ParserRuleContext {
		public String code;
		public FunclistContext funclist;
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public Funclist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist2; }
	}

	public final Funclist2Context funclist2() throws RecognitionException {
		Funclist2Context _localctx = new Funclist2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_funclist2);

		        ((Funclist2Context)_localctx).code =  "";
		    
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				((Funclist2Context)_localctx).funclist = funclist();
				((Funclist2Context)_localctx).code =  ((Funclist2Context)_localctx).funclist.code;
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public String code;
		public String funcLabel;
		public String next;
		public Token IDENT;
		public StatelistContext statelist;
		public TerminalNode DEF() { return getToken(ConvCC20212Parser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(ConvCC20212Parser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(ConvCC20212Parser.LPAREN, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConvCC20212Parser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(ConvCC20212Parser.LBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ConvCC20212Parser.RBRACE, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcdef);

		        ((FuncdefContext)_localctx).code =  "";
		        ((FuncdefContext)_localctx).funcLabel =  createLabel("func");
		        ((FuncdefContext)_localctx).next =  createLabel("label");
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(DEF);
			setState(96);
			((FuncdefContext)_localctx).IDENT = match(IDENT);
			insertIdent((((FuncdefContext)_localctx).IDENT!=null?((FuncdefContext)_localctx).IDENT.getText():null), true, "function", (((FuncdefContext)_localctx).IDENT!=null?((FuncdefContext)_localctx).IDENT.getLine():0));
			putScope(false);
			setState(99);
			match(LPAREN);
			setState(100);
			paramlist();
			setState(101);
			match(RPAREN);
			setState(102);
			match(LBRACE);
			setState(103);
			((FuncdefContext)_localctx).statelist = statelist(false, _localctx.next, "");
			setState(104);
			match(RBRACE);
			popScope();
			((FuncdefContext)_localctx).code =  _localctx.funcLabel + ":\n" + ((FuncdefContext)_localctx).statelist.code;
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public Token TYPE_INT;
		public Token IDENT;
		public Token TYPE_FLOAT;
		public Token TYPE_STRING;
		public TerminalNode TYPE_INT() { return getToken(ConvCC20212Parser.TYPE_INT, 0); }
		public TerminalNode IDENT() { return getToken(ConvCC20212Parser.IDENT, 0); }
		public Paramlist2Context paramlist2() {
			return getRuleContext(Paramlist2Context.class,0);
		}
		public TerminalNode TYPE_FLOAT() { return getToken(ConvCC20212Parser.TYPE_FLOAT, 0); }
		public TerminalNode TYPE_STRING() { return getToken(ConvCC20212Parser.TYPE_STRING, 0); }
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramlist);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((ParamlistContext)_localctx).TYPE_INT = match(TYPE_INT);
				setState(109);
				((ParamlistContext)_localctx).IDENT = match(IDENT);
				setState(110);
				paramlist2();
				insertIdent((((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getText():null), false, (((ParamlistContext)_localctx).TYPE_INT!=null?((ParamlistContext)_localctx).TYPE_INT.getText():null), (((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getLine():0));
				}
				break;
			case TYPE_FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				((ParamlistContext)_localctx).TYPE_FLOAT = match(TYPE_FLOAT);
				setState(114);
				((ParamlistContext)_localctx).IDENT = match(IDENT);
				setState(115);
				paramlist2();
				insertIdent((((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getText():null), false, (((ParamlistContext)_localctx).TYPE_FLOAT!=null?((ParamlistContext)_localctx).TYPE_FLOAT.getText():null), (((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getLine():0));
				}
				break;
			case TYPE_STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				((ParamlistContext)_localctx).TYPE_STRING = match(TYPE_STRING);
				setState(119);
				((ParamlistContext)_localctx).IDENT = match(IDENT);
				setState(120);
				paramlist2();
				insertIdent((((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getText():null), false, (((ParamlistContext)_localctx).TYPE_STRING!=null?((ParamlistContext)_localctx).TYPE_STRING.getText():null), (((ParamlistContext)_localctx).IDENT!=null?((ParamlistContext)_localctx).IDENT.getLine():0));
						
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlist2Context extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ConvCC20212Parser.COMMA, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public Paramlist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist2; }
	}

	public final Paramlist2Context paramlist2() throws RecognitionException {
		Paramlist2Context _localctx = new Paramlist2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramlist2);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(COMMA);
				setState(127);
				paramlist();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public boolean isFor;
		public String next;
		public String breakNext;
		public String code;
		public Atribstat1Context atribstat1;
		public IfstatContext ifstat;
		public ForstatContext forstat;
		public StatelistContext statelist;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ConvCC20212Parser.SEMI, 0); }
		public Atribstat1Context atribstat1() {
			return getRuleContext(Atribstat1Context.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public ReadstatContext readstat() {
			return getRuleContext(ReadstatContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ForstatContext forstat() {
			return getRuleContext(ForstatContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(ConvCC20212Parser.LBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ConvCC20212Parser.RBRACE, 0); }
		public TerminalNode BREAK() { return getToken(ConvCC20212Parser.BREAK, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, boolean isFor, String next, String breakNext) {
			super(parent, invokingState);
			this.isFor = isFor;
			this.next = next;
			this.breakNext = breakNext;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement(boolean isFor,String next,String breakNext) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), isFor, next, breakNext);
		enterRule(_localctx, 12, RULE_statement);

		        ((StatementContext)_localctx).code =  "";
		    
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_STRING:
			case TYPE_FLOAT:
			case TYPE_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				vardecl();
				setState(132);
				match(SEMI);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				((StatementContext)_localctx).atribstat1 = atribstat1();
				setState(135);
				match(SEMI);
				((StatementContext)_localctx).code =  ((StatementContext)_localctx).atribstat1.code;
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				printstat();
				setState(139);
				match(SEMI);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				readstat();
				setState(142);
				match(SEMI);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				returnstat();
				setState(145);
				match(SEMI);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(147);
				((StatementContext)_localctx).ifstat = ifstat(isFor, next, breakNext);
				((StatementContext)_localctx).code =  ((StatementContext)_localctx).ifstat.code;
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 7);
				{
				setState(150);
				((StatementContext)_localctx).forstat = forstat(next);
				((StatementContext)_localctx).code =  ((StatementContext)_localctx).forstat.code;
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				match(LBRACE);
				putScope(isFor);
				setState(155);
				((StatementContext)_localctx).statelist = statelist(isFor, next, breakNext);
				setState(156);
				match(RBRACE);
				popScope();
				((StatementContext)_localctx).code =  ((StatementContext)_localctx).statelist.code;
						
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(160);
				match(BREAK);
				verifyBreak();
				((StatementContext)_localctx).code =  Generator.generateInconditionalDeviationCode(_localctx.breakNext);
				setState(163);
				match(SEMI);
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 10);
				{
				setState(164);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatelistContext extends ParserRuleContext {
		public boolean isFor;
		public String next;
		public String breakNext;
		public String code;
		public String stmtNext;
		public StatementContext statement;
		public Statelist2Context statelist2;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Statelist2Context statelist2() {
			return getRuleContext(Statelist2Context.class,0);
		}
		public StatelistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatelistContext(ParserRuleContext parent, int invokingState, boolean isFor, String next, String breakNext) {
			super(parent, invokingState);
			this.isFor = isFor;
			this.next = next;
			this.breakNext = breakNext;
		}
		@Override public int getRuleIndex() { return RULE_statelist; }
	}

	public final StatelistContext statelist(boolean isFor,String next,String breakNext) throws RecognitionException {
		StatelistContext _localctx = new StatelistContext(_ctx, getState(), isFor, next, breakNext);
		enterRule(_localctx, 14, RULE_statelist);

		        ((StatelistContext)_localctx).stmtNext =  createLabel("label");
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			((StatelistContext)_localctx).statement = statement(isFor, _localctx.stmtNext, breakNext);
			setState(168);
			((StatelistContext)_localctx).statelist2 = statelist2(isFor, next, breakNext);
			((StatelistContext)_localctx).code =  ((StatelistContext)_localctx).statement.code + "\n" + _localctx.stmtNext + ":\n" +  ((StatelistContext)_localctx).statelist2.code ;
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statelist2Context extends ParserRuleContext {
		public boolean isFor;
		public String next;
		public String breakNext;
		public String code;
		public StatelistContext statelist;
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public Statelist2Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Statelist2Context(ParserRuleContext parent, int invokingState, boolean isFor, String next, String breakNext) {
			super(parent, invokingState);
			this.isFor = isFor;
			this.next = next;
			this.breakNext = breakNext;
		}
		@Override public int getRuleIndex() { return RULE_statelist2; }
	}

	public final Statelist2Context statelist2(boolean isFor,String next,String breakNext) throws RecognitionException {
		Statelist2Context _localctx = new Statelist2Context(_ctx, getState(), isFor, next, breakNext);
		enterRule(_localctx, 16, RULE_statelist2);

		        ((Statelist2Context)_localctx).code =  "";
		    
		try {
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case FOR:
			case RETURN:
			case READ:
			case PRINT:
			case BREAK:
			case TYPE_STRING:
			case TYPE_FLOAT:
			case TYPE_INT:
			case IDENT:
			case LBRACE:
			case SEMI:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				((Statelist2Context)_localctx).statelist = statelist(isFor, next, breakNext);
				((Statelist2Context)_localctx).code =  ((Statelist2Context)_localctx).statelist.code;
				}
				break;
			case RBRACE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
